--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -446,7 +446,7 @@
             {block:Quote}
               <h3>"{Quote}"</h3>
               {block:Source}
-                <div class="source">鐚・nbsp;{Source}</div>
+                <div class="source">&mdash;&nbsp;{Source}</div>
               {/block:Source}
             {/block:Quote}
 
