--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <!-- Tumblr Theme 'Quiet Reblogger' by meta-scheme -->
-<html>
+<html {block:Japanese}lang="ja"{/block:Japanese}>
   <head>
     {MobileAppHeaders}
     <meta charset="utf-8"/>
-    <title>{Title}{block:SearchPage} ({lang:Search results for SearchQuery}){/block:SearchPage}{block:PermalinkPage}{block:PostSummary} 痿・{PostSummary}{/block:PostSummary}{/block:PermalinkPage}</title>
+    <title>{Title}{block:SearchPage} ({lang:Search results for SearchQuery}){/block:SearchPage}{block:PermalinkPage}{block:PostSummary} - {PostSummary}{/block:PostSummary}{/block:PermalinkPage}</title>
     {block:Description}<meta name="description" content="{MetaDescription}"/>{/block:Description}
     <meta name="image:Background Image" content=""/>
     <meta name="font:Text Font" content="{TitleFont}"/>
     <meta name="color:Text Color" content="{TitleColor}"/>
+    <meta name="color:Link Information Background Color of Link Post" content="#eeeeee"          />
     <meta name="select:Page width" content="1280px" title="1280px"/>
     <meta name="select:Page width" content="2048px" title="2048px"/>
     <meta name="select:Page width" content="1920px" title="1920px"/>
@@ -87,6 +88,8 @@
           0.5rem;
       }
       h1.blog-title {
+        color:
+          {TitleColor};
         font-family:
           {TitleFont};
         font-weight:
@@ -208,14 +211,42 @@
           inline-block;
       }
       h1, h2, h3, h4, h5, h6 {
-        color:
-          {TitleColor};
       }
       a {
         color:
           {AccentColor};
         text-decoration:
           none;
+      }
+      div.link-information {
+        background-color:
+          {color:Link Information Background Color of Link Post};
+      }
+      div.link-thumbnail-wrapper {
+        margin-right:
+          auto;
+        margin-left:
+          auto;
+        text-align:
+          center;
+      }
+      img.link-thumbnail {
+        max-width:
+          100%;
+        text-align:
+          center;
+      }
+      blockquote {
+        margin:
+          0.5rem;
+        padding:
+          0.5rem;
+        border-left:
+          2px solid {color:Text Color};
+      }
+      div.quiet-reblogger-post-datetime {
+        margin-bottom:
+          0.25rem;
       }
       * {
         font-size:
@@ -347,7 +378,7 @@
         {block:Posts}
           <article class="post {block:Text}text {/block:Text}{block:Photoset}photoset {/block:Photoset}{block:Photo}photo {/block:Photo}{block:RebloggedFrom}reblogged {/block:RebloggedFrom}{block:Quote}quote {/block:Quote}{block:Link}link {/block:Link}{block:Chat}chat {/block:Chat}{block:Audio}audio {/block:Audio}{block:Video}video {/block:Video}{block:Answer}answer {/block:Answer}{block:Date}not-page post-{PostID}{/block:Date} {block:PermalinkPage} active exposed{/block:PermalinkPage}" {block:Date}data-post-id="post_{PostID}"{/block:Date}>
             {block:Date}
-              <span class="inline-block"><a href="{Permalink}" class="share-item permalink"> {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} </a></span> 
+              <div class="quiet-reblogger-post-datetime"><a href="{Permalink}" class="share-item permalink"> {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} </a></div> 
             {/block:Date}
 
             {block:Submission}
@@ -451,9 +482,22 @@
             {/block:Quote}
 
             {block:Link}
-              <h3><a href="{URL}" class="link" {Target}>{Name}</a></h3>
+              <div class="link-information">
+                {block:Host}
+                  <div class="link-host"> {Host} </div> 
+                {/block:Host}
+                <h3><a href="{URL}" class="link" {Target}>{Name}</a></h3>
+                {block:Excerpt}
+                  <div class="link-excerpt">{Excerpt}</div>
+                {/block:Excerpt}
+                {block:Author}
+                  <div class="link-author">{lang:Authors}: {Author}</div>
+                {/block:Author}
+                {block:Thumbnail}<div class="link-thumbnail-wrapper"><img class="link-thumbnail" src="{Thumbnail}" alt="{Name}"/></div>{/block:Thumbnail}
+              </div>
+
               {block:Description}
-                <div class="description">{Description}</div>
+                <div class="link-description">{Description}</div>
               {/block:Description}
             {/block:Link}
 
