--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -4,7 +4,7 @@
   <head>
     {MobileAppHeaders}
     <meta charset="utf-8"/>
-    <title>{Title}{block:SearchPage} ({lang:Search results for SearchQuery}){/block:SearchPage}{block:PermalinkPage}{block:PostSummary} - {PostSummary}{/block:PostSummary}{/block:PermalinkPage}</title>
+    <title>{Title}{block:SearchPage} ({lang:Search results for SearchQuery}){/block:SearchPage}{block:PermalinkPage}{block:PostSummary} &mdash; {PostSummary}{/block:PostSummary}{/block:PermalinkPage}</title>
     {block:Description}<meta name="description" content="{MetaDescription}"/>{/block:Description}
     <meta name="image:Background Image" content=""/>
     <meta name="font:Text Font" content="{TitleFont}"/>
@@ -163,9 +163,13 @@
       }
       div.submitter-information {
       }
-      div.question {
+      div.question, div.answer {
         border:
           1px solid {color:Text Color};
+        margin-top:
+          0.5rem;
+        margin-bottom:
+          0.5rem;
       }
       div.reblog-control, div.like-control {
         display:
@@ -199,6 +203,12 @@
       div.embed-wrapper > iframe {
         max-width:
           100%;
+      }
+      article.post > iframe.twitter-tweet.twitter-tweet-rendered {
+        margin-left:
+          auto!important;
+        margin-right:
+          auto!important;
       }
       img.photo-content {
         width:
@@ -561,8 +571,7 @@
               {block:Answerer}
                 <div class="answer">
                   <div class="answerer">
-                    <img class="answerer-avatar" src="{AnswererPortraitURL-16}" alt="">
-                    {Answerer}
+                    <img class="answerer-avatar" src="{AnswererPortraitURL-16}" alt=""> {Answerer}
                   </div>
                   <div class="answerer-answer">{Answer}</div>
                 </div>
