--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -25,6 +25,8 @@
     <meta name="if:Show Archive Navigation" content="1"/>
     <meta name="if:Show Pagenation Navigation" content="1"/>
     <meta name="if:Show Search Navigation" content="0"/>
+    <meta name="if:Show Powered By Tumblr" content="1"/>
+    <meta name="if:Show Install This Theme" content="1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="{Favicon}"/>
     <link rel="alternate" type="application/rss+xml" href="{RSS}">
@@ -215,6 +217,12 @@
           100%;
         text-align:
           center;
+      }
+      article.post.text img {
+        max-width:
+          100%;
+        height:
+          auto;
       }
       span.inline-block {
         display:
@@ -725,8 +733,12 @@
         {/block:IfShowPageFooterNavigation}
 
         <div class="colophon">
-          <span class="powered-by-tumblr">{lang:Powered by Tumblr 2}</span>
-          <span class="install-this-theme"><a href="http://www.tumblr.com/theme/39781">{lang:Install this theme}</a></span>
+          {block:IfShowPoweredByTumblr}
+            <span class="powered-by-tumblr">{lang:Powered by Tumblr 2}</span>
+          {/block:IfShowPoweredByTumblr}
+          {block:IfShowInstallThisTheme}
+            <span class="install-this-theme"><a href="http://www.tumblr.com/theme/39781">{lang:Install this theme}</a></span>
+          {/block:IfShowInstallThisTheme}
         </div>
       </footer>
     </section>
