--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -27,6 +27,16 @@
     <meta name="if:Show Search Navigation" content="0"/>
     <meta name="if:Show Powered By Tumblr" content="1"/>
     <meta name="if:Show Install This Theme" content="1"/>
+    <meta name="if:Show View High Resolution in Index Page"        content="0"/>
+    <meta name="if:Show View High Resolution in Permalink Page"    content="1"/>
+    <meta name="if:Show Exif Information in Index Page"            content="0"/>
+    <meta name="if:Show Exif Information in Permalink Page"        content="1"/>
+    <meta name="if:Show Audio Track Information in Index Page"     content="0"/>
+    <meta name="if:Show Audio Track Information in Permalink Page" content="1"/>
+    <meta name="if:Show Caption in Index Page"                     content="0"/>
+    <meta name="if:Show Caption in Permalink Page"                 content="1"/>
+    <meta name="if:Use Well Known Japanese Fonts"   content="0"/>
+    <meta name="if:Use Noto Sans Japanese"          content="0"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="{Favicon}"/>
     <link rel="alternate" type="application/rss+xml" href="{RSS}">
@@ -239,8 +249,14 @@
       div.link-information {
         background-color:
           {color:Link Information Background Color of Link Post};
+        padding:
+          0.5rem;
       }
       div.link-thumbnail-wrapper {
+        margin-top:
+          0.5rem;
+        margin-bottom:
+          0.5rem;
         margin-right:
           auto;
         margin-left:
@@ -416,45 +432,33 @@
               {LinkOpenTag}
                 <img class="photo-content" src="{PhotoURL-500}" alt="{PhotoAlt}"/>
               {LinkCloseTag}
-              {block:PermalinkPage}
-                {block:Caption}
-                  <div class="caption">{Caption}</div>
-                {/block:Caption}
-                {block:HighRes}
-                   <div><a href="{PhotoURL-HighRes}">{lang:View high resolution}</a></div>
-                {/block:HighRes}
-                {block:Exif}
-                  <ul>
-                  {block:Camera}
-                    <li>Camera: {Camera}</li>
-                  {/block:Camera}
-                  {block:Aperture}
-                    <li>Aperture: {Aperture}</li>
-                  {/block:Aperture}
-                  {block:Exposure}
-                    <li>Exposure: {Exposure}</li>
-                  {/block:Exposure}
-                  {block:FocalLength}
-                    <li>Focal Length: {FocalLength}</li>
-                  {/block:FocalLength}
-                  </ul>
-                {/block:Exif}
-              {/block:PermalinkPage}
-            {/block:Photo}
-
-            {block:Photoset}
-              {block:Photos}
-                {LinkOpenTag}
-                  <img class="photo-content" src="{PhotoURL-500}" alt="{PhotoAlt}"/>
-                {LinkCloseTag}
-                {block:PermalinkPage}
-                  {block:Caption}
+              {block:Caption}
+                {block:IndexPage}
+                  {block:IfShowCaptionInIndexPage}
                     <div class="caption">{Caption}</div>
-                  {/block:Caption}
-                  {block:HighRes}
+                  {/block:IfShowCaptionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowCaptionInPermalinkPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:Caption}
+              {block:HighRes}
+                {block:IndexPage}
+                  {block:IfShowViewHighResolutionInIndexPage}
                      <div><a href="{PhotoURL-HighRes}">{lang:View high resolution}</a></div>
-                  {/block:HighRes}
-                  {block:Exif}
+                  {/block:IfShowViewHighResolutionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowViewHighResolutionInPermalinkPage}
+                     <div><a href="{PhotoURL-HighRes}">{lang:View high resolution}</a></div>
+                  {/block:IfShowViewHighResolutionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:HighRes}
+              {block:Exif}
+                {block:IndexPage}
+                  {block:IfShowExifInformationInIndexPage}
                     <ul>
                     {block:Camera}
                       <li>Camera: {Camera}</li>
@@ -469,15 +473,110 @@
                       <li>Focal Length: {FocalLength}</li>
                     {/block:FocalLength}
                     </ul>
-                  {/block:Exif}
+                  {/block:IfShowExifInformationInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowExifInformationInPermalinkPage}
+                    <ul>
+                    {block:Camera}
+                      <li>Camera: {Camera}</li>
+                    {/block:Camera}
+                    {block:Aperture}
+                      <li>Aperture: {Aperture}</li>
+                    {/block:Aperture}
+                    {block:Exposure}
+                      <li>Exposure: {Exposure}</li>
+                    {/block:Exposure}
+                    {block:FocalLength}
+                      <li>Focal Length: {FocalLength}</li>
+                    {/block:FocalLength}
+                    </ul>
+                  {/block:IfShowExifInformationInPermalinkPage}
                 {/block:PermalinkPage}
+              {/block:Exif}
+            {/block:Photo}
+
+            {block:Photoset}
+              {block:Photos}
+                {LinkOpenTag}
+                  <img class="photo-content" src="{PhotoURL-500}" alt="{PhotoAlt}"/>
+                {LinkCloseTag}
+                {block:Caption}
+                  {block:IndexPage}
+                    {block:IfShowCaptionInIndexPage}
+                      <div class="caption">{Caption}</div>
+                    {/block:IfShowCaptionInIndexPage}
+                  {/block:IndexPage}
+                  {block:PermalinkPage}
+                    {block:IfShowCaptionInPermalinkPage}
+                      <div class="caption">{Caption}</div>
+                    {/block:IfShowCaptionInPermalinkPage}
+                  {/block:PermalinkPage}
+                {/block:Caption}
+                {block:HighRes}
+                  {block:IndexPage}
+                    {block:IfShowViewHighResolutionInIndexPage}
+                     <div><a href="{PhotoURL-HighRes}">{lang:View high resolution}</a></div>
+                    {/block:IfShowViewHighResolutionInIndexPage}
+                  {/block:IndexPage}
+                  {block:PermalinkPage}
+                    {block:IfShowViewHighResolutionInPermalinkPage}
+                     <div><a href="{PhotoURL-HighRes}">{lang:View high resolution}</a></div>
+                    {/block:IfShowViewHighResolutionInPermalinkPage}
+                  {/block:PermalinkPage}
+                {/block:HighRes}
+                {block:Exif}
+                  {block:IndexPage}
+                    {block:IfShowExifInformationInIndexPage}
+                      <ul>
+                      {block:Camera}
+                        <li>Camera: {Camera}</li>
+                      {/block:Camera}
+                      {block:Aperture}
+                        <li>Aperture: {Aperture}</li>
+                      {/block:Aperture}
+                      {block:Exposure}
+                        <li>Exposure: {Exposure}</li>
+                      {/block:Exposure}
+                      {block:FocalLength}
+                        <li>Focal Length: {FocalLength}</li>
+                      {/block:FocalLength}
+                      </ul>
+                    {/block:IfShowExifInformationInIndexPage}
+                  {/block:IndexPage}
+                  {block:PermalinkPage}
+                    {block:IfShowExifInformationInPermalinkPage}
+                      <ul>
+                      {block:Camera}
+                        <li>Camera: {Camera}</li>
+                      {/block:Camera}
+                      {block:Aperture}
+                        <li>Aperture: {Aperture}</li>
+                      {/block:Aperture}
+                      {block:Exposure}
+                        <li>Exposure: {Exposure}</li>
+                      {/block:Exposure}
+                      {block:FocalLength}
+                        <li>Focal Length: {FocalLength}</li>
+                      {/block:FocalLength}
+                      </ul>
+                    {/block:IfShowExifInformationInPermalinkPage}
+                  {/block:PermalinkPage}
+                {/block:Exif}
               {/block:Photos}
 
-              {block:PermalinkPage}
-                {block:Caption}
-                  <div class="caption">{Caption}</div>
-                {/block:Caption}
-              {/block:PermalinkPage}
+              {block:Caption}
+                {block:IndexPage}
+                  {block:IfShowCaptionInIndexPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowCaptionInPermalinkPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:Caption}
             {/block:Photoset}
 
             {block:Panorama}
@@ -485,11 +584,18 @@
                 <img class="photo-content" src="{PhotoURL-Panorama}" alt="{PhotoAlt}"/>
               {LinkCloseTag}
 
-              {block:PermalinkPage}
-                {block:Caption}
-                  <div class="caption">{Caption}</div>
-                {/block:Caption}
-              {/block:PermalinkPage}
+              {block:Caption}
+                {block:IndexPage}
+                  {block:IfShowCaptionInIndexPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowCaptionInPermalinkPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:Caption}
             {/block:Panorama}
 
             {block:Quote}
@@ -541,12 +647,18 @@
               <div class="embed-wrapper">
                 {Video-700}
               </div>
-
-              {block:PermalinkPage}
-                {block:Caption}
-                  <div class="caption">{Caption}</div>
-                {/block:Caption}
-              {/block:PermalinkPage}
+              {block:Caption}
+                {block:IndexPage}
+                  {block:IfShowCaptionInIndexPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowCaptionInPermalinkPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:Caption}
             {/block:Video}
 
             {block:Audio}
@@ -556,15 +668,34 @@
                 </div>
               {/block:AudioEmbed}
 
-              {block:PermalinkPage}
-                {block:Caption}
-                  <div class="caption">{Caption}</div>
-                {/block:Caption}
+              {block:Caption}
+                {block:IndexPage}
+                  {block:IfShowCaptionInIndexPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInIndexPage}
+                {/block:IndexPage}
+                {block:PermalinkPage}
+                  {block:IfShowCaptionInPermalinkPage}
+                    <div class="caption">{Caption}</div>
+                  {/block:IfShowCaptionInPermalinkPage}
+                {/block:PermalinkPage}
+              {/block:Caption}
 
-                {block:TrackName}Track Name: {TrackName}<br/>{/block:TrackName}
-                {block:Artist}Artist: {Artist}<br/>{/block:Artist}
-                {block:Album}Album: {Album}<br/>{/block:Album}
-                {block:ExternalAudio}<a href="{ExternalAudioURL}">{lang:Download this track}</a><br/>{/block:ExternalAudio}
+              {block:IndexPage}
+                {block:IfShowAudioTrackInformationInIndexPage}
+                  {block:TrackName}Track Name: {TrackName}<br/>{/block:TrackName}
+                  {block:Artist}Artist: {Artist}<br/>{/block:Artist}
+                  {block:Album}Album: {Album}<br/>{/block:Album}
+                  {block:ExternalAudio}<a href="{ExternalAudioURL}">{lang:Download this track}</a><br/>{/block:ExternalAudio}
+                {/block:IfShowAudioTrackInformationInIndexPage}
+              {/block:IndexPage}
+              {block:PermalinkPage}
+                {block:IfShowAudioTrackInformationInPermalinkPage}
+                  {block:TrackName}Track Name: {TrackName}<br/>{/block:TrackName}
+                  {block:Artist}Artist: {Artist}<br/>{/block:Artist}
+                  {block:Album}Album: {Album}<br/>{/block:Album}
+                  {block:ExternalAudio}<a href="{ExternalAudioURL}">{lang:Download this track}</a><br/>{/block:ExternalAudio}
+                {/block:IfShowAudioTrackInformationInPermalinkPage}
               {/block:PermalinkPage}
             {/block:Audio}
 
