--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -25,8 +25,6 @@
     <meta name="if:Show Archive Navigation" content="1"/>
     <meta name="if:Show Pagenation Navigation" content="1"/>
     <meta name="if:Show Search Navigation" content="0"/>
-    <meta name="if:Show Following" content="0"/>
-    <meta name="if:Show Likes" content="0"/>
     <meta name="if:Show Powered By Tumblr" content="1"/>
     <meta name="if:Show Install This Theme" content="1"/>
     <meta name="if:Show View High Resolution in Index Page"        content="0"/>
@@ -538,10 +536,6 @@
           {TitleFont};
         font-weight:
           {TitleFontWeight};
-        font-size:
-          x-large;
-        margin:
-          0.5rem;
       }
       {block:IfUseHuiFontFixedPitch}
         .HuiFont, .HuiFont * {
@@ -693,7 +687,7 @@
       }
       div.question, div.answer {
         border:
-          1px solid {color:One Post Area Text Color};
+          1px solid {color:Text Color};
         margin-top:
           0.5rem;
         margin-bottom:
@@ -753,12 +747,6 @@
       span.inline-block {
         display:
           inline-block;
-      }
-      .text-orientation-upright {
-        text-orientation:
-          upright;
-        -webkit-text-orientation:
-          upright;
       }
       h1, h2, h3, h4, h5, h6 {
       }
