--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -68,7 +68,7 @@
     <meta name="select:Lang Attribute of HTML Element" content=' lang="da"'      title="Danish"                   />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="nl"'      title="Dutch"                    />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="en"'      title="English"                  />
-    <meta name="select:Lang Attribute of HTML Element" content=' lang="eo"'      title="Esperanto                 />
+    <meta name="select:Lang Attribute of HTML Element" content=' lang="eo"'      title="Esperanto"                />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="et"'      title="Estonian"                 />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="fo"'      title="Faeroese"                 />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="fa"'      title="Farsi"                    />
@@ -424,13 +424,11 @@
           {block:IfUseKouzanMouhitsuFontGyousho}
             KouzanMouhitsuFontGyousho,
           {/block:IfUseKouzanMouhitsuFontGyousho}
-          {TitleFont}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
+          {font:Text Font}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
         box-sizing:
           border-box;
       }
       html, body {
-        font-family:
-          {font:Text Font}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
         margin:
           0;
         padding:
