--- a/quiet-reblogger.html
+++ b/quiet-reblogger.html
@@ -38,6 +38,10 @@
     <meta name="if:Show Audio Caption in Permalink Page"           content="1"/>
     <meta name="if:Show Audio Track Information in Index Page"     content="0"/>
     <meta name="if:Show Audio Track Information in Permalink Page" content="1"/>
+    <meta name="if:Show Post DateTime in Index Page"               content="1"/>
+    <meta name="if:Show Post DateTime in Permalink Page"           content="1"/>
+    <meta name="if:Show Article Footer in Index Page"              content="0"/>
+    <meta name="if:Show Article Footer in Permalink Page"          content="1"/>
     <meta name="select:Lang Attribute of HTML Element" content=''                title="None"                     />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="ab"'      title="Abkhazian"                />
     <meta name="select:Lang Attribute of HTML Element" content=' lang="aa"'      title="Afar"                     />
@@ -1073,7 +1077,16 @@
         {block:Posts}
           <article class="post {block:Text}text {/block:Text}{block:Photoset}photoset {/block:Photoset}{block:Photo}photo {/block:Photo}{block:RebloggedFrom}reblogged {/block:RebloggedFrom}{block:Quote}quote {/block:Quote}{block:Link}link {/block:Link}{block:Chat}chat {/block:Chat}{block:Audio}audio {/block:Audio}{block:Video}video {/block:Video}{block:Answer}answer {/block:Answer}{block:Date}not-page post-{PostID}{/block:Date} {block:PermalinkPage} active exposed{/block:PermalinkPage}" {block:Date}data-post-id="post_{PostID}"{/block:Date}>
             {block:Date}
-              <div class="quiet-reblogger-post-datetime"><a href="{Permalink}" class="share-item permalink"> {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} </a></div> 
+              {block:IndexPage}
+                {block:IfShowPostDateTimeInIndexPage}
+                  <div class="quiet-reblogger-post-datetime"><a href="{Permalink}" class="share-item permalink"> {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} </a></div> 
+                {/block:IfShowPostDateTimeInIndexPage}
+              {/block:IndexPage}
+              {block:PermalinkPage}
+                {block:IfShowPostDateTimeInPermaLinkPage}
+                  <div class="quiet-reblogger-post-datetime"><a href="{Permalink}" class="share-item permalink"> {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} </a></div> 
+                {/block:IfShowPostDateTimeInPermaLinkPage}
+              {/block:PermalinkPage}
             {/block:Date}
 
             {block:Submission}
@@ -1390,56 +1403,110 @@
               </div>
             {/block:Answer}
 
-            <footer class="article-footer">
-              {block:PermalinkPage}
-                {block:NoteCount}
-                  <a href="{Permalink}#PostNotes"><span>{NoteCountWithLabel}</span></a> 
-                {/block:NoteCount}
+            {block:IndexPage}
+              {block:IfShowArticleFooterInIndexPage}
+                <footer class="article-footer">
+                  {block:NoteCount}
+                    <a href="{Permalink}#PostNotes"><span>{NoteCountWithLabel}</span></a> 
+                  {/block:NoteCount}
 
-                {block:Date}
-                  {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} 
-                {/block:Date}
+                  {block:Date}
+                    {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} 
+                  {/block:Date}
 
-                <span class="inline-block"><a href="{Permalink}" class="share-item permalink">{lang:Permalink}</a></span> 
+                  <span class="inline-block"><a href="{Permalink}" class="share-item permalink">{lang:Permalink}</a></span> 
 
-                <div class="control reblog-control">{ReblogButton}</div>
+                  <div class="control reblog-control">{ReblogButton}</div>
 
-                <div class="control like-control">{LikeButton}</div>
+                  <div class="control like-control">{LikeButton}</div>
 
-                {block:HasTags}
-                  <div>
-                  {block:Tags}
-                    <a href="{TagURL}">#{Tag}</a> 
-                  {/block:Tags}
-                  </div>
-                {/block:HasTags}
-
-                {block:PostNotes}
-                  <div class="postnotes">
-                  {block:ContentSource}
+                  {block:HasTags}
                     <div>
-                    <a href="{SourceURL}">
-                    {lang:Source}:
-                    {block:SourceLogo}
-                        <img src="{BlackLogoURL}" width="{LogoWidth}" height="{LogoHeight}" alt="{SourceTitle}" />
-                    {/block:SourceLogo}
-                    {block:NoSourceLogo}
-                        {SourceLink}
-                    {/block:NoSourceLogo}
-                    </a>
+                    {block:Tags}
+                      <a href="{TagURL}">#{Tag}</a> 
+                    {/block:Tags}
                     </div>
-                  {/block:ContentSource}
+                  {/block:HasTags}
 
-                  {block:RebloggedFrom}
-                    <div>{lang:Originally from ReblogRootTitle 2}</div>
-                  {/block:RebloggedFrom}
+                  {block:PostNotes}
+                    <div class="postnotes">
+                      {block:ContentSource}
+                        <div>
+                          <a href="{SourceURL}">
+                            {lang:Source}:
+                            {block:SourceLogo}
+                              <img src="{BlackLogoURL}" width="{LogoWidth}" height="{LogoHeight}" alt="{SourceTitle}" />
+                            {/block:SourceLogo}
+                            {block:NoSourceLogo}
+                              {SourceLink}
+                            {/block:NoSourceLogo}
+                          </a>
+                        </div>
+                      {/block:ContentSource}
 
-                  <a id="PostNotes"/>
-                  {PostNotes}
-                  </div>
-                {/block:PostNotes}
-              {/block:PermalinkPage}
-            </footer>
+                      {block:RebloggedFrom}
+                        <div>{lang:Originally from ReblogRootTitle 2}</div>
+                      {/block:RebloggedFrom}
+
+                      <a id="PostNotes"/>
+                      {PostNotes}
+                    </div>
+                  {/block:PostNotes}
+                </footer>
+              {/block:IfShowArticleFooterInIndexPage}
+            {/block:IndexPage}
+            {block:PermalinkPage}
+              {block:IfShowArticleFooterInPermalinkPage}
+                <footer class="article-footer">
+                  {block:NoteCount}
+                    <a href="{Permalink}#PostNotes"><span>{NoteCountWithLabel}</span></a> 
+                  {/block:NoteCount}
+
+                  {block:Date}
+                    {Year}-{MonthNumberWithZero}-{DayOfMonthWithZero} {24HourWithZero}:{Minutes}:{Seconds} 
+                  {/block:Date}
+
+                  <span class="inline-block"><a href="{Permalink}" class="share-item permalink">{lang:Permalink}</a></span> 
+
+                  <div class="control reblog-control">{ReblogButton}</div>
+
+                  <div class="control like-control">{LikeButton}</div>
+
+                  {block:HasTags}
+                    <div>
+                    {block:Tags}
+                      <a href="{TagURL}">#{Tag}</a> 
+                    {/block:Tags}
+                    </div>
+                  {/block:HasTags}
+
+                  {block:PostNotes}
+                    <div class="postnotes">
+                      {block:ContentSource}
+                        <div>
+                          <a href="{SourceURL}">
+                            {lang:Source}:
+                            {block:SourceLogo}
+                              <img src="{BlackLogoURL}" width="{LogoWidth}" height="{LogoHeight}" alt="{SourceTitle}" />
+                            {/block:SourceLogo}
+                            {block:NoSourceLogo}
+                              {SourceLink}
+                            {/block:NoSourceLogo}
+                          </a>
+                        </div>
+                      {/block:ContentSource}
+
+                      {block:RebloggedFrom}
+                        <div>{lang:Originally from ReblogRootTitle 2}</div>
+                      {/block:RebloggedFrom}
+
+                      <a id="PostNotes"/>
+                      {PostNotes}
+                    </div>
+                  {/block:PostNotes}
+                </footer>
+              {/block:IfShowArticleFooterInPermalinkPage}
+            {/block:PermalinkPage}
           </article>
         {/block:Posts}
       </section>
